[workspace]
members = [
  "crates/mdfs-image",
  "crates/mdfs-layout",
  "crates/mdfs-index",
  "crates/mdfs-fuse",
  "crates/mdfsck-lite",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.0"
authors = ["MDH10 Workspace"]

[workspace.lints.rust]
unsafe_code = "forbid"
